[package]
name = "front-vehicle-controller"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
defmt = { version = "0.3.5", features = ["encoding-rzcobs"] }
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
fdcan = { version = "0.1.2", features = ["fdcan_g0_g4_l5"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.4.1", features = [
    "cortex-m-systick",
    "systick-64bit",
    "systick-10khz",
] }
crc = "3.0"
zerocopy = "0.6"
byteorder = { version = "1.4", default-features = false }

[dependencies.stm32g4xx-hal]
git = "https://github.com/stm32-rs/stm32g4xx-hal"
features = [
    "stm32g431",
    "rt",
    "defmt-logging",
]

[[bin]]
name = "front-vehicle-controller"
test = false
bench = false
harness = false
